--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,7 +3,8 @@ body {
   font-family: helvetica;
   font-size: 22px;
 /*  color: seashell; */
-  opacity: 0.9;
+  margin: auto;
+  width: 100%;
 }
 
 div {
@@ -25,7 +26,7 @@ header {
 .header-nav {
   display: flex;
   text-align: right;
-  padding-left: 1027px;
+  flex-grow: 1;
   justify-content: flex-end;
 }
 
@@ -48,14 +49,21 @@ header img {
 
 /* hero image section */
 .hero-image {
+  display: flex;
+  justify-content: center;
   height: 700px;
+  width: 1200px;
   align-items: center;
-  padding-top: 100px;
+  padding-top: 200px;
   background-image: url("./resources/images/img-mission-background.jpg");
 }
 
-.header-text {
+.flex-container {
+  text-align: center;
+  width: 1200px;
+}
 
+.header-text {
 text-align: center;
 color: black;
 width: 1200px;
@@ -69,7 +77,7 @@ width: 1200px;
 
 .tea-of-the-month {
   text-align: center;
-  align-self: center;
+
 }
 
 .all-items {
