--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,7 +2,7 @@
 body {
   font-family: helvetica;
   font-size: 22px;
-/*  color: seashell; */
+  /*  color: seashell; */
   margin: auto;
   width: 100%;
 }
@@ -41,10 +41,9 @@ a {
 
 header img {
   display: flex;
-  align-items: center;
+  justify-content: center;
   height: 50px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding: 0 10px 0 10px;
 }
 
 /* hero image section */
@@ -55,12 +54,14 @@ header img {
   width: 1200px;
   align-items: center;
   padding-top: 200px;
-  background-image: url("./resources/images/img-mission-background.jpg");
+  background-image: url("file:///C:/Users/Patrick/Documents/Work/_Codecademy/TeaCozy/resources/images/img-mission-background.jpg");
+  background-size: cover;
 }
 
 .flex-container {
   text-align: center;
   width: 1200px;
+  background-color: gray;
 }
 
 .header-text {
@@ -75,9 +76,9 @@ width: 1200px;
   width: 100%;
 }
 
+/* featured tea section */
 .tea-of-the-month {
   text-align: center;
-
 }
 
 .all-items {
@@ -100,4 +101,28 @@ width: 1200px;
   width: 300px;
   height: 200px;
   opacity: 0.5;
+  margin: 0;
+}
+
+/* locations section */
+.address-big-box {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 1000px;
+}
+
+.address {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  width: 300px;
+  height: 500px;
+}
+
+.locations {
+  background-image: url("file:///C:/Users/Patrick/Documents/Work/_Codecademy/TeaCozy/resources/images/img-locations-background.jpg");
+  background-size: cover;
+  width: 1200px;
+  height: 700px;
 }
