--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,8 +1,9 @@
 /* Universal Styles */
+
 body {
   font-family: helvetica;
   font-size: 22px;
-  /*  color: seashell; */
+  /* color: seashell; */
   margin: auto;
   width: 100%;
 }
@@ -51,24 +52,23 @@ header img {
   display: flex;
   justify-content: center;
   height: 700px;
-  width: 1200px;
+  width: 100%;
   align-items: center;
-  padding-top: 200px;
   background-image: url("file:///C:/Users/Patrick/Documents/Work/_Codecademy/TeaCozy/resources/images/img-mission-background.jpg");
   background-size: cover;
+  background-position: center;
 }
 
 .flex-container {
   text-align: center;
-  width: 1200px;
+  width: 100%;
   background-color: gray;
 }
 
 .header-text {
-text-align: center;
-color: black;
-width: 1200px;
-
+  text-align: center;
+  color: black;
+  width: 1200px;
 }
 
 .hero {
@@ -78,15 +78,20 @@ width: 1200px;
 
 /* featured tea section */
 .tea-of-the-month {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-wrap: wrap;
   text-align: center;
 }
 
 .all-items {
   display: flex;
   flex-wrap: wrap;
+  width: 100%;
   justify-content: center;
   width: 1000px;
-  height: auto;
+
 }
 
 .store-items {
@@ -100,29 +105,67 @@ width: 1200px;
   flex-wrap: wrap;
   width: 300px;
   height: 200px;
-  opacity: 0.5;
   margin: 0;
 }
 
 /* locations section */
 .address-big-box {
   display: flex;
-  justify-content: center;
   flex-wrap: wrap;
-  width: 1000px;
+  justify-content: center;
+  align-items: center;
+
+  width: 100%;
+  height: 500px;
 }
+
+.address-big-box h2 {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding-top: 20px;
+}
+
+
 
 .address {
   display: flex;
-  align-items: center;
+  flex-basis: 280px;
+  flex-direction: column;
   text-align: center;
   width: 300px;
-  height: 500px;
+  height: 250px;
+  margin: 20px;
+  background-color: gray;
 }
 
 .locations {
   background-image: url("file:///C:/Users/Patrick/Documents/Work/_Codecademy/TeaCozy/resources/images/img-locations-background.jpg");
   background-size: cover;
   width: 1200px;
-  height: 700px;
+  height: 500px;
+  display: flex;
+  justify-content: center;
+}
+
+.the-tea-cozy {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+  height: 200px;
+}
+
+.the-tea-cozy h2 h5 {
+  text-align: center;
+}
+
+.the-tea-cozy h5 {
+  text-align: center;
+}
+
+
+.footer {
+  text-align: left;
+  padding-left: 20px;
 }
