--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -78,19 +78,17 @@ header img {
 
 /* featured tea section */
 .tea-of-the-month {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  flex-wrap: wrap;
+  align-items: center;
   text-align: center;
+  margin: auto;
 }
 
 .all-items {
   display: flex;
   flex-wrap: wrap;
-  width: 100%;
-  justify-content: center;
   width: 1000px;
+  justify-content: center;
+
 
 }
 
@@ -112,12 +110,24 @@ header img {
 .address-big-box {
   display: flex;
   flex-wrap: wrap;
+  padding-top: 5px;
+  margin: auto;
   justify-content: center;
   align-items: center;
+  width: 1100px;
 
+}
+
+.locations {
+  background-image: url("file:///C:/Users/Patrick/Documents/Work/_Codecademy/TeaCozy/resources/images/img-locations-background.jpg");
+  background-size: cover;
+  background-position: center;
   width: 100%;
   height: 500px;
+  display: flex;
+  justify-content: center;
 }
+
 
 .address-big-box h2 {
   display: flex;
@@ -126,45 +136,25 @@ header img {
   padding-top: 20px;
 }
 
-
-
 .address {
   display: flex;
   flex-basis: 280px;
   flex-direction: column;
   text-align: center;
-  width: 300px;
-  height: 250px;
-  margin: 20px;
+  justify-content: center;
+  margin: 5px 20px;
+  padding: 10px;
   background-color: gray;
+  opacity: 1.0;
 }
 
-.locations {
-  background-image: url("file:///C:/Users/Patrick/Documents/Work/_Codecademy/TeaCozy/resources/images/img-locations-background.jpg");
-  background-size: cover;
-  width: 1200px;
-  height: 500px;
-  display: flex;
-  justify-content: center;
-}
-
-.the-tea-cozy {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  align-items: center;
+/* contact section */
+#contact {
+  text-align: center;
   height: 200px;
 }
 
-.the-tea-cozy h2 h5 {
-  text-align: center;
-}
-
-.the-tea-cozy h5 {
-  text-align: center;
-}
-
-
+/* footer section */
 .footer {
   text-align: left;
   padding-left: 20px;
